# cos

./: .gitignore  AGENTS.md  CLAUDE.md  COS_DESIGN_DIRECTION.md  PRD-cos.md  README.md  operating-instructions.md  pyproject.toml  requirements.txt
finances/: CLAUDE.md
health/: CLAUDE.md
home/: __init__.py  __main__.py  app.py  brief.py  data.py  launch.py  scan.py  theme.py  viz.py
knowledge-base/: CLAUDE.md
knowledge-base/inputs/: config.json
learning-pipeline/: CLAUDE.md
learning-pipeline/inputs/: reading-goals.md  sources.json
macos-helper/: Info.plist  Makefile  README.md  build.sh
macos-helper/Sources/: CosURLHandler.swift
memory/: session-2026-05-25.md
overview-brief/: CLAUDE.md
overview-brief/data/: ai-news.json  status.json
overview-brief/inputs/: config.json  focus.md
overview-brief/outputs/: daily-brief-2026-05-27.md
prds/: AUTONOMY-CHARTER.md  NOTE-for-Grok-live-read.md  PRD-cos-dashboard-basecamp.md  PRD-cos-finances-visual-dashboard.md  PRD-cos-home-terminal.md  PRD-cos-model-agnostic-migration-and-terminal-dashboard.md  PRD-cos.md  PRD-llm-wiki-dashboard.md  PRD-overview-brief.md
scripts/: com.wedge.cos-brief.plist  cos  cos-push.sh  generate_dashboard.py  kb-push.sh  migrate_mgkolbs_frontmatter.py
tasks-calendar/: CLAUDE.md
tasks-calendar/inputs/: config.json  recurring.md
tests/: test_home_viz.py
tests/integration/: test_grok_integration.py  test_tui_dashboard.py
tests/unit/: test_data_loader.py
toolbox/: brief.md  builder.md  capture.md  research.md  today.md
tui/: README.md  __init__.py  __main__.py  app.py
(+6 files in other folders)
